--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ body {
   font-family: Roboto;
 }
 
+.big-pad {
+  padding: 0 5%;
+}
+
+.space {
+  margin: 1.5rem 0;
+}
+
 .pad {
   padding: 0 .5rem 0 1.5rem;
 }
@@ -71,6 +79,11 @@ nav {
   padding: 0 25px;
 }
 
+nav .logo img {
+  height: auto;
+  width: 150px;
+}
+
 nav .navbar ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -97,15 +110,15 @@ img {
   width: 30rem;
 }
 
-header {
+.header {
   height: 35rem;
-  backgrond: #1D1D1D;
+  background-color: #1D1D1D;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-header .image {
+.header .image {
   display: inherit;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -122,12 +135,12 @@ header .image {
           flex: 2;
 }
 
-header .image img {
+.header .image img {
   height: auto;
   width: 25rem;
 }
 
-header .text {
+.header .text {
   display: inherit;
   color: #fff;
   -webkit-box-flex: 2;
@@ -147,7 +160,7 @@ header .text {
   height: 100%;
 }
 
-header .text .box {
+.header .text .box {
   width: 60%;
   height: 100%;
   -webkit-box-orient: vertical;
@@ -162,11 +175,11 @@ header .text .box {
           justify-content: center;
 }
 
-header .text .box h1 {
+.header .text .box h1 {
   font-size: 2.5rem;
 }
 
-header .text .box a {
+.header .text .box a {
   margin: 25px 0;
 }
 
@@ -261,6 +274,7 @@ header .text .box a {
 }
 
 .text-section .main-text .text p {
+  width: 80%;
   line-height: 1.55;
   font-size: 1.2rem;
 }
@@ -287,7 +301,7 @@ header .text .box a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   border-top: 3px solid #FE5D26;
-  margin: 2.5rem 0;
+  margin: 1.5rem 0;
 }
 
 .text-image .image-info p {
@@ -489,20 +503,20 @@ header .text .box a {
 .photographers .team-photos .team:hover img {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
-  background-color: linear-gradient(to right, #333, #333);
+  background: -webkit-gradient(linear, left top, right top, from(#333), to(#333));
+  background: linear-gradient(to right, #333, #333);
 }
 
 .photographers .team-photos .team:hover p {
-  background-color: transparent;
+  background-color: #ffffff77;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   bottom: -.2rem;
-  color: #fff;
-  font-size: 2rem;
-  font-weight: 600;
+  color: #1D1D1D;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  width: -220%;
   left: 0;
-}
-
-.photographers .team-photos .team:hover p:last-child {
-  color: #FE5D26;
 }
 
 h2 {
@@ -664,12 +678,26 @@ footer .social-icons img {
 }
 
 @media (max-width: 906px) {
-  header {
-    background: url("images/header-img.png") fixed center no-repeat;
+  .header {
+    height: 80vh;
+    background: -webkit-gradient(linear, left top, right top, from(#333333c0), to(#1d1b1bd2)), url("/images/header-img.png") center center no-repeat;
+    background: linear-gradient(to right, #333333c0, #1d1b1bd2), url("/images/header-img.png") center center no-repeat;
     background-size: cover;
   }
-  header .image {
+  .header .image {
     display: none;
+  }
+  .half {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .big-pad {
+    padding: 0 2%;
   }
   .contact section {
     display: inherit;
@@ -724,6 +752,9 @@ footer .social-icons img {
   .contact .message .form form .input-group input {
     width: 100%;
   }
+  .contact .message .form form .input-group textarea {
+    width: 100%;
+  }
   .contact .message .form form .input-submit {
     text-align: center;
   }
@@ -739,6 +770,16 @@ footer .social-icons img {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .sessions .text {
+    border: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .sessions .text div {
+    width: 100%;
+    height: 100%;
+  }
   .row {
     display: inherit;
     -webkit-box-orient: vertical;
@@ -752,10 +793,6 @@ footer .social-icons img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-  .text-section .main-text .side-text .rotate {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
   }
   .photographers .team-photos {
     display: -webkit-box;
@@ -771,6 +808,27 @@ footer .social-icons img {
   .photographers .team-photos .team img {
     height: auto;
     width: 20rem;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 667px) {
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 0;
+    height: 32rem;
+    padding-bottom: 5rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
