--- a/css/style.sass
+++ b/css/style.sass
@@ -23,6 +23,7 @@ body
 // Strapping 
 .big-pad 
     padding: 0 5%
+    position: relative
 .space 
     margin: 1.5rem 0 
 
@@ -43,6 +44,15 @@ a
     text-decoration: none
 .reverse 
     flex-direction: row-reverse
+.vertical 
+    flex-direction: row
+
+.girl-two 
+    background: url('/images/girl.png') center center no-repeat
+    background-position: cover
+.girl-one 
+    background: url('/images/female-light.png') center center no-repeat
+    background-position: cover
 
 nav 
     width: 100%
@@ -122,7 +132,30 @@ img
     &:hover
         background: $dark
         color: #fff
+.upper-text
+    height: 15%
+    // height: 100%
+    padding-left: 2.5rem
+    display: flex
+    position: relative
+    // z-index: 2
+    margin-top: 5rem
+    top: 50%
+    align-items: center
+    justify-content: flex-start
+    // background-color: #ee0
+    h2 
+        font-size: 1.6rem
+        margin-left: 4rem
+    hr 
+        // color: #00e
+        border: 0
+        background-color: $orange
+        width: 15%
+        margin: 0 2rem
 
+        height: .25rem
+    
 
 .text-section
     display: flex 
@@ -130,44 +163,12 @@ img
     flex-direction: column
     flex: 2
     // background-color: #333
-    .upper-text
-        height: 15%
-        // height: 100%
-        padding-left: 2.5rem
-        display: flex
-        align-items: center
-        justify-content: space-evenly
-        // background-color: #ee0
-        hr 
-            // color: #00e
-            border: 0
-            background-color: $orange
-            width: 30%
-            height: .25rem
             
     .main-text 
         height: 95%
         // background-color: #419789
         display: flex
-        .side-text 
-            color: $dark
-            // background-color: #419789
-            height: 100%
-            width: 10%
-            display: flex
-            justify-content: center
-            align-items: center
-            .rotate 
-                transform: rotate(90deg)
-                background-color: $orange
-                display: flex
-                // width: 100%
-                // height: 15%
-                padding: 1.0rem 2rem
-
-
-                &.second
-                    transform: rotate(270deg)
+        
                     
         .text 
             // display
@@ -181,12 +182,51 @@ img
                 
                 margin: 0 10px
 
+.box 
+    display: flex 
+    flex-direction: row
+    &.reverse
+        flex-direction: row-reverse
+
+
+    overflow: hidden
+    .case 
+        display: flex
+        // border-bottom: 3px solid $orange
+        width: 100%
+        flex-direction: column
+        .image 
+            height: 20rem
+
+    .side-text 
+                color: $dark
+                // background-color: #419789
+                height: 100%
+                width: 10%
+                display: flex
+                justify-content: center
+                align-items: center
+                .rotate 
+                    transform: rotate(90deg)
+                    background-color: $orange
+                    display: flex
+                    // width: 100%
+                    // height: 15%
+                    padding: 1.0rem 2rem
+
+
+                    &.second
+                        transform: rotate(270deg)
+
 
 .text-image
     display: inherit
     height: 100%
     flex-direction: column
     // text-align: center
+    // .image 
+    //     height: 20rem
+        // width: 100%
     img 
         // height: auto
         // width: 100% 
@@ -293,7 +333,7 @@ img
         margin: 0 5rem
         // text-align: center
         div 
-            width: 59%
+            width: 100%
             p 
                 margin: 1rem 0 
                 // line-height: 1.5rem
@@ -472,6 +512,11 @@ footer
             height: auto 
             width: 2.5rem
 
+@media (max-width: 747px) 
+    nav 
+        .navbar 
+
+            &.responsive
         
 
 @media (max-width: 906px) 
@@ -483,12 +528,58 @@ footer
         .image
             display: none
 
+    // .reverse 
+    //     flex-direction: column-reverse
+    .vanish 
+        visibility: hidden
+    main
+        margin-top: 1rem
+    .upper-text 
+        text-align: left
+        display: inline
+        h2 
+            margin: 0
+        hr 
+            display: none
+
+    .sessions 
+        .image 
+            background: url('/images/set.png') center center no-repeat
+            background-position: cover
+        .text 
+            margin: 0
+            div 
+                p 
+                    width: 80%
+    
+    .info
+        &.reverse 
+            flex-direction: column-reverse
+
+    .box 
+        display: flex
+        flex-direction: row-reverse
+        &.reverse 
+            flex-direction: row
+    
+    .pad 
+        padding: 0
 
     .half 
         display: flex 
-        flex-direction: column-reverse
+        flex-direction: column
     .big-pad 
         padding: 0 2%
+
+    .services 
+        section 
+            .title 
+                h2 
+                    margin: .5rem 0
+                hr 
+                    display: none
+            .text 
+                margin: 0
 
     .contact 
         // text-align: center
