--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,24 @@ a {
   background-position: cover;
 }
 
+.burger {
+  display: none;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition: all 350ms ease-in;
+  transition: all 350ms ease-in;
+}
+
+.burger:hover {
+  opacity: .6;
+  bottom: 1rem;
+}
+
+.burger img {
+  height: auto;
+  width: 2rem;
+}
+
 nav {
   width: 100%;
   display: -webkit-box;
@@ -288,6 +306,12 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow: hidden;
 }
 
@@ -316,7 +340,7 @@ img {
 .box .side-text {
   color: #1D1D1D;
   height: 100%;
-  width: 10%;
+  width: 15%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -335,6 +359,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-self: center;
+  position: relative;
   padding: 1.0rem 2rem;
 }
 
@@ -384,6 +410,36 @@ img {
 .button-outline:hover {
   background-color: #1D1D1D;
   color: #fff;
+}
+
+@-webkit-keyframes light-bounce {
+  0% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  40% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+}
+
+@keyframes light-bounce {
+  0% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  40% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
 }
 
 .services {
@@ -481,6 +537,41 @@ img {
       justify-content: space-around;
 }
 
+.sessions .image {
+  height: 30rem;
+  width: auto;
+  background: url("/images/set.png") center center no-repeat;
+  background-position: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sessions .image .play {
+  width: 5rem;
+  height: auto;
+  opacity: 0.8;
+  -webkit-transition: 150ms ease-out;
+  transition: 150ms ease-out;
+  -webkit-animation: light-bounce 1.8s infinite;
+          animation: light-bounce 1.8s infinite;
+}
+
+.sessions .image .play:hover {
+  -webkit-transform: scale(1.9);
+          transform: scale(1.9);
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+  opacity: 1;
+  cursor: pointer;
+}
+
 .sessions .text {
   border-top: 2px solid #FE5D26;
   -webkit-box-orient: vertical;
@@ -522,10 +613,10 @@ img {
   padding: 0 5rem;
 }
 
-.gallery .gallery-images img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: auto;
+.gallery .gallery-images .image {
+  height: 40rem;
+  background: url("/images/GALLERY.png") center no-repeat;
+  background-position: cover;
   width: 100%;
 }
 
@@ -616,7 +707,7 @@ h2 {
 }
 
 .contact section .action img {
-  height: auto;
+  height: 2rem;
   width: 2rem;
 }
 
@@ -737,7 +828,74 @@ footer .social-icons img {
   width: 2.5rem;
 }
 
+@media (max-width: 747px) {
+  nav {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  nav.responsive .navbar {
+    background-color: #1D1D1D;
+    color: #fff;
+    top: 5rem;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    position: absolute;
+  }
+  nav.responsive .navbar ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transition: 350ms ease-out;
+    transition: 350ms ease-out;
+    background-color: #FE5D26;
+    -webkit-box-shadow: 1px 8px 29px -6px rgba(0, 0, 0, 0.35);
+            box-shadow: 1px 8px 29px -6px rgba(0, 0, 0, 0.35);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-bottom: .5rem solid #fff;
+  }
+  nav.responsive .navbar ul li {
+    margin: 3rem 0;
+  }
+  nav.responsive .navbar ul li a {
+    color: #fff;
+    padding: .5rem 2.5rem;
+    border-radius: 100px;
+  }
+  nav.responsive .navbar ul li a:hover, nav.responsive .navbar ul li a:active {
+    color: #1D1D1D;
+    -webkit-box-shadow: 1px 8px 29px -6px rgba(0, 0, 0, 0.35);
+            box-shadow: 1px 8px 29px -6px rgba(0, 0, 0, 0.35);
+    background-color: #fff;
+  }
+  nav .navbar ul {
+    display: none;
+  }
+  nav .burger {
+    position: absolute;
+    display: inline;
+    right: 5%;
+  }
+}
+
 @media (max-width: 906px) {
+  body {
+    overflow: hidden;
+  }
   .header {
     height: 80vh;
     background: -webkit-gradient(linear, left top, right top, from(#333333c0), to(#1d1b1bd2)), url("/images/header-img.png") center center no-repeat;
@@ -783,10 +941,6 @@ footer .social-icons img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
   }
   .box.reverse {
     -webkit-box-orient: horizontal;
@@ -928,9 +1082,39 @@ footer .social-icons img {
     height: auto;
     width: 20rem;
   }
+  .gallery .gallery-images {
+    width: 100%;
+  }
+  .gallery .gallery-images .image {
+    height: 40rem;
+    background: url("/images/gallery-mobile.png") center no-repeat;
+    background-position: cover;
+    width: 100%;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 667px) {
+  .box .side-text .rotate {
+    position: relative;
+  }
+  .text-section .main-text .text {
+    padding: 0;
+    text-align: left;
+  }
+  .text-section .main-text .text p {
+    width: 80%;
+  }
+  .text-section .main-text .text.flex-center {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   footer {
     display: -webkit-box;
     display: -ms-flexbox;
